# langchain_learning

./: .gitignore  app.py  chainlit.config.toml  pyproject.toml
chains/: basic.py  branch_task.py  parallel_task.py
chat_models/: basic.py  basic_openai.py  conversation.py  conversation_user.py  history_firestore.py  inmemory_history.py
rag/: basic.py  chroma_viewer.py  conversation.py  create_vector_store.py
templates/: basic.py  chat.py
